--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,6 +1,7 @@
 FROM liquibase/liquibase
 
 COPY ./changelog /liquibase/changelog
+COPY ./sql /liquibase/sql
 COPY ./config/liquibase.properties /liquibase/config/liquibase.properties
 COPY *.xml /liquibase/
 
