--- a/.github/workflows/job-deploy-db-changelog.yml
+++ b/.github/workflows/job-deploy-db-changelog.yml
@@ -46,6 +46,5 @@ jobs:
       - name: Update Changelog
         run: |
           make create-ssh-tunnel environment=${{ inputs.environment }}
-          python scripts/update.py --stage staging
+          python db/scripts/update.py --stage staging
           make close-ssh-tunnel environment=${{ inputs.environment }}
-        working-directory: db
