--- a/.github/workflows/merge-production.yml
+++ b/.github/workflows/merge-production.yml
@@ -6,19 +6,6 @@ on:
       - main
 
 jobs:
-  cleanup:
-    if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging')
-    name: Clean Deployment History
-    runs-on: ubuntu-latest
-    permissions: write-all
-    steps:
-      - name: 🗑 Delete deployment
-        uses: strumwolf/delete-deployment-environment@v2
-        with:
-          environment: Production
-          token: ${{ secrets.GH_TOKEN }}
-          onlyRemoveDeployments: true
-
   check-infrastructure-changes:
     if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging')
     name: Check Infrastructure Changes
@@ -29,38 +16,179 @@ jobs:
       - name: Fetch Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 2
 
-      - name: Check Infrastructure Files Changed
-        uses: dorny/paths-filter@v3
-        id: changes-infrastructure
-        with:
-          filters: |
-            package:
-              - 'terraform/**'
+      - name: Check if files have changed
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./terraform
+          then
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Set output
         id: check
-        run: echo "infra-changed=${{ steps.changes-infrastructure.outputs.package }}" >> $GITHUB_OUTPUT
+        run: echo "infra-changed=${{ steps.files.outputs.changed }}" >> $GITHUB_OUTPUT
+
+  check-web-changes:
+    if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging')
+    name: Check Web Changes
+    runs-on: ubuntu-latest
+    outputs:
+      web-changed: ${{ steps.check.outputs.web-changed }}
+    steps:
+      - name: Fetch Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Check if files have changed
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./web
+          then
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Set output
+        id: check
+        run: echo "web-changed=${{ steps.files.outputs.changed }}" >> $GITHUB_OUTPUT
+
+  check-lambda-changes:
+    if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging')
+    name: Check Lambda Changes
+    runs-on: ubuntu-latest
+    outputs:
+      lambdas-changed: ${{ steps.check.outputs.lambdas-changed }}
+    steps:
+      - name: Fetch Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Check if files have changed
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./lambdas
+          then
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Set output
+        id: check
+        run: echo "lambdas-changed=${{ steps.files.outputs.changed }}" >> $GITHUB_OUTPUT
+
+  check-db-changes:
+    if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging')
+    name: Check DB Changes
+    runs-on: ubuntu-latest
+    outputs:
+      db-changed: ${{ steps.check.outputs.db-changed }}
+    steps:
+      - name: Fetch Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Check files have changed
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./db
+          then
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Set output
+        id: check
+        run: echo "db-changed=${{ steps.files.outputs.changed }}" >> $GITHUB_OUTPUT
+
+  cleanup:
+    if: >-
+      contains(github.event.head_commit.message, 'Merge pull request') &&
+      contains(github.event.head_commit.message, 'staging') &&
+      (
+        needs.check-infrastructure-changes.outputs.infra-changed == 'true' ||
+        needs.check-web-changes.outputs.web-changed == 'true' ||
+        needs.check-lambda-changes.outputs.lambdas-changed == 'true' ||
+        needs.check-db-changes.outputs.db-changed == 'true'
+      )
+    name: Clean Deployment History
+    needs:
+      [
+        check-infrastructure-changes,
+        check-web-changes,
+        check-lambda-changes,
+        check-db-changes,
+      ]
+    runs-on: ubuntu-latest
+    permissions: write-all
+    steps:
+      - name: 🗑 Delete deployment
+        uses: strumwolf/delete-deployment-environment@v2
+        with:
+          environment: Production
+          token: ${{ secrets.GH_TOKEN }}
+          onlyRemoveDeployments: true
 
   deploy-terraform-shared:
     if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging') && needs.check-infrastructure-changes.outputs.infra-changed == 'true'
     name: Deployment
     permissions: write-all
-    needs: [check-infrastructure-changes, cleanup]
+    needs: [check-infrastructure-changes]
     uses: ./.github/workflows/job-deploy-infrastructure.yml
     with:
+      component: shared
       environment: production
       environment-label: Production
-      component: shared
       label: Shared Infrastructure
     secrets: inherit
 
-  deploy-website:
-    if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging')
+  deploy-terraform-environment:
+    if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging') && needs.check-infrastructure-changes.outputs.infra-changed == 'true'
     name: Deployment
-    needs: [cleanup]
+    permissions: write-all
+    needs: [deploy-terraform-shared, check-infrastructure-changes]
+    uses: ./.github/workflows/job-deploy-infrastructure.yml
+    with:
+      component: environment
+      environment: production
+      environment-label: Production
+      label: Environment Infrastructure
+    secrets: inherit
+
+  deploy-website:
+    if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging') && needs.check-web-changes.outputs.web-changed == 'true'
+    name: Deployment
+    needs: [check-web-changes]
     uses: ./.github/workflows/job-deploy-website.yml
+    with:
+      environment: production
+      environment-label: Production
+    secrets: inherit
+
+  deploy-lambdas:
+    if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging') && needs.check-lambda-changes.outputs.lambdas-changed == 'true'
+    name: Deployment
+    needs: [check-lambda-changes]
+    uses: ./.github/workflows/job-deploy-lambdas.yml
+    with:
+      environment: production
+      environment-label: Production
+    secrets: inherit
+
+  deploy-db-changelog:
+    if: contains(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'staging') && needs.check-db-changes.outputs.db-changed == 'true'
+    name: Deployment
+    needs: [check-db-changes]
+    uses: ./.github/workflows/job-deploy-db-changelog.yml
     with:
       environment: production
       environment-label: Production
