--- a/.github/workflows/pull-request-production.yml
+++ b/.github/workflows/pull-request-production.yml
@@ -45,3 +45,14 @@ jobs:
       component: shared
       label: Shared Infrastructure
     secrets: inherit
+
+  plan-terraform-environment:
+    name: Plan
+    needs: [plan-infrastructure-shared]
+    uses: ./.github/workflows/job-plan-infrastructure.yml
+    with:
+      environment: production
+      environment-label: Production
+      component: environment
+      label: Environment Infrastructure
+    secrets: inherit
