--- a/.github/workflows/dispatch-maintenance-mode.yml
+++ b/.github/workflows/dispatch-maintenance-mode.yml
@@ -28,17 +28,19 @@ jobs:
           MODE: ${{ inputs.mode }}
         run: |
           production_url="app.matchya.ai."
+
           # Should get the hosted zone id via ssm param
           hosted_zone_id=$(aws ssm get-parameter --name /terraform/shared/route53/zone_id --query "Parameter.Value" --output text)
-          echo hosted_zone_id
+          echo $hosted_zone_id
 
           if [ "$MODE" == "enter" ]; then
             # get the cloud distribution url of the maintenance page
             cloud_distribution_url=$(aws ssm get-parameter --name /terraform/shared/cloudfront/url/page-maintenance.app.matchya.ai --query "Parameter.Value" --output text)
-          else:
+          else
             # get the cloud distribution url of the production app
             cloud_distribution_url=$(aws ssm get-parameter --name /terraform/production/cloudfront/url/app.matchya.ai --query "Parameter.Value" --output text)
           fi
+          echo $cloud_distribution_url
 
           # Get the current record set
           aws route53 list-resource-record-sets --hosted-zone-id $hosted_zone_id --query "ResourceRecordSets[?Name==$production_url]" > recordset.json
