--- a/.github/workflows/dispatch-maintenance-mode.yml
+++ b/.github/workflows/dispatch-maintenance-mode.yml
@@ -46,7 +46,7 @@ jobs:
           aws route53 list-resource-record-sets --hosted-zone-id $hosted_zone_id --query "ResourceRecordSets[?Name=='$production_url']" > recordset.json
 
           # Edit the recordset.json file to change the AliasTarget to the new CloudFront distribution URL
-          python -c "
+          CLOUD_DISTRIBUTION_URL=$cloud_distribution_url python -c "
           import json
           import os
           with open('recordset.json', 'r+') as file:
@@ -55,7 +55,7 @@ jobs:
               file.seek(0)
               json.dump(data, file, indent=2)
               file.truncate()
-          " CLOUD_DISTRIBUTION_URL=$cloud_distribution_url
+          "
 
           # Update the record set
           aws route53 change-resource-record-sets --hosted-zone-id $hosted_zone_id --change-batch file://recordset.json
